2006-06-14  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, ChangeLog, src/Makefile.am, src/al_ext.h,
	src/al_main.c, src/al_queue.c, src/al_source.c, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_darwin.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c:
	Moved config handling to a separate directory.

	* config/al_config.c, config/al_config.h, config/al_rctree.c,
	config/al_rctree.h, config/al_rcvar.c, config/al_rcvar.h: Added.

	* al_config.c, al_config.h, al_rctree.c, al_rctree.h, al_rcvar.c,
	al_rcvar.h: Removed.

2006-06-09  Sven Panne  <sven.panne@aedion.de>

	* src/al_rcvar.c, src/al_rcvar.h, src/al_rctree.h, src/al_config.c:
	Removed unused print_prim function. Moved ALRcEnum type where it
	belongs. Removed unused cell types "pointer value" and "unsingned
	integer".

	* src/al_ext.h, src/al_rcvar.c, src/al_rcvar.h, src/alc/alc_device.c,
	src/al_config.c, src/al_config.h, src/backends/alc_backend.c: Removed
	unused rc_typestr, rc_lookup_list, rc_print, _alGetGlobalScalar
	functions. Removed unused lal_GetGlobalScalar, lal_GetGlobalVector,
	rc_cddr, rc_cdddr, rc_cddddr, rc_cddddddr, rc_cadr, rc_caddr, rc_cadddr,
	rc_caddddr, rc_cadddddr macro. Made rc_toprim, rc_tofloat, rc_equal,
	rc_member, rc_strequal functions static.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_alsa.c: Give snd_pcm_open a 2nd chance after
	0.2sec if it fails, because dmix tends to have problems with it when the
	device has been closed recently.

	* src/backends/alc_backend_alsa.c: Make "default" the default ALSA device.

2006-06-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Bump version to 1.1.0.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: Spec updates for SuSE 10.1.

	* configure.ac: Bump version to 1.1.0. This is necessary for building an