@@ -265,13 +265,12 @@ ENDIF(UNIX)
 
 CHECK_INCLUDE_FILE("dlfcn.h" HAVE_DL)
 IF(HAVE_DL)
+  ADD_DEFINE(USE_DLOPEN)
   CHECK_LIBRARY_EXISTS("dl" "dlopen" "" HAVE_LIB_DL)
   IF(HAVE_LIB_DL)
     SET(ADD_LIBS ${ADD_LIBS} dl)
   ENDIF(HAVE_LIB_DL)
 ELSE(HAVE_DL)
-
-  ADD_DEFINE(NODLOPEN)
   MESSAGE("Dynamic loading of libraries is not available.")
 ENDIF(HAVE_DL)
 
